// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Wordle > renders Wordle grid 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <nav
          class="navbar navbar navbar-expand navbar-light"
        >
          <div
            class="navbar-nav"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/"
            >
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-arrow-left'%3e%3cline%20x1='19'%20y1='12'%20x2='5'%20y2='12'%3e%3c/line%3e%3cpolyline%20points='12%2019%205%2012%2012%205'%3e%3c/polyline%3e%3c/svg%3e"
              />
            </a>
          </div>
        </nav>
        <div
          id="wordle-grid"
        >
          <div
            class="game-header"
          >
            <h1>
              Wordle
            </h1>
            <div>
              <div
                class="form-check form-switch"
              >
                <input
                  aria-checked="false"
                  class="form-check-input"
                  id="hard-mode-switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="hard-mode-switch"
                  title=""
                >
                  Hard Mode
                </label>
              </div>
            </div>
          </div>
          <div
            class="game-container"
          >
            <div>
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
          </div>
          <div
            class="game-footer mt-2"
          >
            Powered by
            <span>
              <a
                href="https://wordnet.princeton.edu/"
                target="_blank"
              >
                 WordNet Core 
                <img
                  src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
                />
              </a>
            </span>
             and
            <span>
              <a
                href="https://www.mediawiki.org/wiki/REST_API"
                target="_blank"
              >
                 Wikimedia REST API 
                <img
                  src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
                />
              </a>
            </span>
          </div>
          <button
            class="mt-4 restart-button d-none"
            style="background-color: rgb(36, 36, 36); color: rgba(255, 255, 255, 0.87);"
          >
            <img
              src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-rotate-ccw'%3e%3cpolyline%20points='1%204%201%2010%207%2010'%3e%3c/polyline%3e%3cpath%20d='M3.51%2015a9%209%200%201%200%202.13-9.36L1%2010'%3e%3c/path%3e%3c/svg%3e"
            />
            Play again!
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <nav
        class="navbar navbar navbar-expand navbar-light"
      >
        <div
          class="navbar-nav"
        >
          <a
            class="nav-link"
            data-discover="true"
            href="/"
          >
            <img
              src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-arrow-left'%3e%3cline%20x1='19'%20y1='12'%20x2='5'%20y2='12'%3e%3c/line%3e%3cpolyline%20points='12%2019%205%2012%2012%205'%3e%3c/polyline%3e%3c/svg%3e"
            />
          </a>
        </div>
      </nav>
      <div
        id="wordle-grid"
      >
        <div
          class="game-header"
        >
          <h1>
            Wordle
          </h1>
          <div>
            <div
              class="form-check form-switch"
            >
              <input
                aria-checked="false"
                class="form-check-input"
                id="hard-mode-switch"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="hard-mode-switch"
                title=""
              >
                Hard Mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="game-container"
        >
          <div>
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
        </div>
        <div
          class="game-footer mt-2"
        >
          Powered by
          <span>
            <a
              href="https://wordnet.princeton.edu/"
              target="_blank"
            >
               WordNet Core 
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
              />
            </a>
          </span>
           and
          <span>
            <a
              href="https://www.mediawiki.org/wiki/REST_API"
              target="_blank"
            >
               Wikimedia REST API 
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
              />
            </a>
          </span>
        </div>
        <button
          class="mt-4 restart-button d-none"
          style="background-color: rgb(36, 36, 36); color: rgba(255, 255, 255, 0.87);"
        >
          <img
            src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-rotate-ccw'%3e%3cpolyline%20points='1%204%201%2010%207%2010'%3e%3c/polyline%3e%3cpath%20d='M3.51%2015a9%209%200%201%200%202.13-9.36L1%2010'%3e%3c/path%3e%3c/svg%3e"
          />
          Play again!
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Wordle > shows game lost splash screen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    class=""
    style=""
  >
    <div>
      <div
        class="container"
      >
        <nav
          class="navbar navbar navbar-expand navbar-light"
        >
          <div
            class="navbar-nav"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/"
            >
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-arrow-left'%3e%3cline%20x1='19'%20y1='12'%20x2='5'%20y2='12'%3e%3c/line%3e%3cpolyline%20points='12%2019%205%2012%2012%205'%3e%3c/polyline%3e%3c/svg%3e"
              />
            </a>
          </div>
        </nav>
        <div
          id="wordle-grid"
        >
          <div
            class="game-header"
          >
            <h1>
              Wordle
            </h1>
            <div>
              <div
                class="form-check form-switch"
              >
                <input
                  aria-checked="false"
                  class="form-check-input"
                  id="hard-mode-switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="hard-mode-switch"
                  title=""
                >
                  Hard Mode
                </label>
              </div>
            </div>
          </div>
          <div
            class="game-container"
          >
            <div>
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
          </div>
          <div
            class="game-footer mt-2"
          >
            Powered by
            <span>
              <a
                href="https://wordnet.princeton.edu/"
                target="_blank"
              >
                 WordNet Core 
                <img
                  src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
                />
              </a>
            </span>
             and
            <span>
              <a
                href="https://www.mediawiki.org/wiki/REST_API"
                target="_blank"
              >
                 Wikimedia REST API 
                <img
                  src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
                />
              </a>
            </span>
          </div>
          <button
            class="mt-4 restart-button d-none"
            style="background-color: rgb(36, 36, 36); color: rgba(255, 255, 255, 0.87);"
          >
            <img
              src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-rotate-ccw'%3e%3cpolyline%20points='1%204%201%2010%207%2010'%3e%3c/polyline%3e%3cpath%20d='M3.51%2015a9%209%200%201%200%202.13-9.36L1%2010'%3e%3c/path%3e%3c/svg%3e"
            />
            Play again!
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <nav
        class="navbar navbar navbar-expand navbar-light"
      >
        <div
          class="navbar-nav"
        >
          <a
            class="nav-link"
            data-discover="true"
            href="/"
          >
            <img
              src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-arrow-left'%3e%3cline%20x1='19'%20y1='12'%20x2='5'%20y2='12'%3e%3c/line%3e%3cpolyline%20points='12%2019%205%2012%2012%205'%3e%3c/polyline%3e%3c/svg%3e"
            />
          </a>
        </div>
      </nav>
      <div
        id="wordle-grid"
      >
        <div
          class="game-header"
        >
          <h1>
            Wordle
          </h1>
          <div>
            <div
              class="form-check form-switch"
            >
              <input
                aria-checked="false"
                class="form-check-input"
                id="hard-mode-switch"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="hard-mode-switch"
                title=""
              >
                Hard Mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="game-container"
        >
          <div>
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
        </div>
        <div
          class="game-footer mt-2"
        >
          Powered by
          <span>
            <a
              href="https://wordnet.princeton.edu/"
              target="_blank"
            >
               WordNet Core 
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
              />
            </a>
          </span>
           and
          <span>
            <a
              href="https://www.mediawiki.org/wiki/REST_API"
              target="_blank"
            >
               Wikimedia REST API 
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
              />
            </a>
          </span>
        </div>
        <button
          class="mt-4 restart-button d-none"
          style="background-color: rgb(36, 36, 36); color: rgba(255, 255, 255, 0.87);"
        >
          <img
            src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-rotate-ccw'%3e%3cpolyline%20points='1%204%201%2010%207%2010'%3e%3c/polyline%3e%3cpath%20d='M3.51%2015a9%209%200%201%200%202.13-9.36L1%2010'%3e%3c/path%3e%3c/svg%3e"
          />
          Play again!
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Wordle > shows game win splash screen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    class=""
    style=""
  >
    <div>
      <div
        class="container"
      >
        <nav
          class="navbar navbar navbar-expand navbar-light"
        >
          <div
            class="navbar-nav"
          >
            <a
              class="nav-link"
              data-discover="true"
              href="/"
            >
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-arrow-left'%3e%3cline%20x1='19'%20y1='12'%20x2='5'%20y2='12'%3e%3c/line%3e%3cpolyline%20points='12%2019%205%2012%2012%205'%3e%3c/polyline%3e%3c/svg%3e"
              />
            </a>
          </div>
        </nav>
        <div
          id="wordle-grid"
        >
          <div
            class="game-header"
          >
            <h1>
              Wordle
            </h1>
            <div>
              <div
                class="form-check form-switch"
              >
                <input
                  aria-checked="false"
                  class="form-check-input"
                  id="hard-mode-switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="hard-mode-switch"
                  title=""
                >
                  Hard Mode
                </label>
              </div>
            </div>
          </div>
          <div
            class="game-container"
          >
            <div>
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
            <div>
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
              <input
                class="wordle-0"
                disabled=""
                readonly=""
                value=""
              />
            </div>
          </div>
          <div
            class="game-footer mt-2"
          >
            Powered by
            <span>
              <a
                href="https://wordnet.princeton.edu/"
                target="_blank"
              >
                 WordNet Core 
                <img
                  src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
                />
              </a>
            </span>
             and
            <span>
              <a
                href="https://www.mediawiki.org/wiki/REST_API"
                target="_blank"
              >
                 Wikimedia REST API 
                <img
                  src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
                />
              </a>
            </span>
          </div>
          <button
            class="mt-4 restart-button d-none"
            style="background-color: rgb(36, 36, 36); color: rgba(255, 255, 255, 0.87);"
          >
            <img
              src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-rotate-ccw'%3e%3cpolyline%20points='1%204%201%2010%207%2010'%3e%3c/polyline%3e%3cpath%20d='M3.51%2015a9%209%200%201%200%202.13-9.36L1%2010'%3e%3c/path%3e%3c/svg%3e"
            />
            Play again!
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <nav
        class="navbar navbar navbar-expand navbar-light"
      >
        <div
          class="navbar-nav"
        >
          <a
            class="nav-link"
            data-discover="true"
            href="/"
          >
            <img
              src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-arrow-left'%3e%3cline%20x1='19'%20y1='12'%20x2='5'%20y2='12'%3e%3c/line%3e%3cpolyline%20points='12%2019%205%2012%2012%205'%3e%3c/polyline%3e%3c/svg%3e"
            />
          </a>
        </div>
      </nav>
      <div
        id="wordle-grid"
      >
        <div
          class="game-header"
        >
          <h1>
            Wordle
          </h1>
          <div>
            <div
              class="form-check form-switch"
            >
              <input
                aria-checked="false"
                class="form-check-input"
                id="hard-mode-switch"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="hard-mode-switch"
                title=""
              >
                Hard Mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="game-container"
        >
          <div>
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
          <div>
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
            <input
              class="wordle-0"
              disabled=""
              readonly=""
              value=""
            />
          </div>
        </div>
        <div
          class="game-footer mt-2"
        >
          Powered by
          <span>
            <a
              href="https://wordnet.princeton.edu/"
              target="_blank"
            >
               WordNet Core 
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
              />
            </a>
          </span>
           and
          <span>
            <a
              href="https://www.mediawiki.org/wiki/REST_API"
              target="_blank"
            >
               Wikimedia REST API 
              <img
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='1'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-external-link'%3e%3cpath%20d='M18%2013v6a2%202%200%200%201-2%202H5a2%202%200%200%201-2-2V8a2%202%200%200%201%202-2h6'%3e%3c/path%3e%3cpolyline%20points='15%203%2021%203%2021%209'%3e%3c/polyline%3e%3cline%20x1='10'%20y1='14'%20x2='21'%20y2='3'%3e%3c/line%3e%3c/svg%3e"
              />
            </a>
          </span>
        </div>
        <button
          class="mt-4 restart-button d-none"
          style="background-color: rgb(36, 36, 36); color: rgba(255, 255, 255, 0.87);"
        >
          <img
            src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewBox='0%200%2024%2024'%20fill='none'%20stroke='%23ffffffde'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20class='feather%20feather-rotate-ccw'%3e%3cpolyline%20points='1%204%201%2010%207%2010'%3e%3c/polyline%3e%3cpath%20d='M3.51%2015a9%209%200%201%200%202.13-9.36L1%2010'%3e%3c/path%3e%3c/svg%3e"
          />
          Play again!
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
